@@ -23,7 +23,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.xwiki.configuration.ConfigurationSource;
 import org.xwiki.model.reference.DocumentReference;
@@ -196,6 +195,6 @@ public abstract class AbstractWikisConfigurationSource extends AbstractDocumentC
         wikis.add(this.wikiManager.getCurrentWikiId());
         // And then in the main wiki (of course, if it's not the same as the current wiki).
         wikis.add(this.wikiManager.getMainWikiId());
-        return wikis.stream().collect(Collectors.toList());
+        return wikis.stream().toList();
     }
 }
