@@ -280,7 +280,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrQuery solrQuery = new SolrQuery();
 
-        solrQuery.addFilterQuery(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID + ':'
+        solrQuery.addFilterQuery(AbstractSolrCoreInitializer.SOLR_FIELD_ID + ':'
             + this.utils.toCompleteFilterQueryString(this.extensionIndexSolrUtil.toSolrId(extensionId)));
 
         if (local != null) {
@@ -303,7 +303,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrInputDocument document = new SolrInputDocument();
 
-        this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID,
+        this.utils.set(AbstractSolrCoreInitializer.SOLR_FIELD_ID,
             this.extensionIndexSolrUtil.toSolrId(extensionId), document);
 
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, ExtensionIndexSolrCoreInitializer.SOLR_FIELD_LAST,
@@ -313,7 +313,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     }
 
     /**
-     * Update variable informations (support plans, ratings, etc.).
+     * Update variable information (support plans, ratings, etc.).
      *
      * @param extensionId the identifier of the extension to update
      * @param remoteExtension the remote extension from which to extract variable information
@@ -324,7 +324,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrInputDocument document = new SolrInputDocument();
 
-        this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID,
+        this.utils.set(AbstractSolrCoreInitializer.SOLR_FIELD_ID,
             this.extensionIndexSolrUtil.toSolrId(extensionId), document);
 
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, RemoteExtension.FIELD_SUPPORT_PLANS,
@@ -333,9 +333,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, RemoteExtension.FIELD_RECOMMENDED,
             remoteExtension.isRecommended(), document);
 
-        if (remoteExtension instanceof RatingExtension) {
-            RatingExtension ratingExtension = (RatingExtension) remoteExtension;
-
+        if (remoteExtension instanceof RatingExtension ratingExtension) {
             this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, RatingExtension.FIELD_TOTAL_VOTES,
                 ratingExtension.getRating().getTotalVotes(), document);
             this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, RatingExtension.FIELD_AVERAGE_VOTE,
@@ -373,15 +371,15 @@ public class ExtensionIndexStore implements Initializable, Disposable
         }
         Stream<String> cveIds =
             result.getSecurityVulnerabilities().stream().map(SecurityVulnerabilityDescriptor::getId);
-        this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, SECURITY_CVE_ID, cveIds.collect(Collectors.toList()),
+        this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, SECURITY_CVE_ID, cveIds.toList(),
             doc);
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, SECURITY_CVE_LINK,
             result.getSecurityVulnerabilities().stream().map(SecurityVulnerabilityDescriptor::getURL)
-                .collect(Collectors.toList()),
+                .toList(),
             doc);
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, SECURITY_CVE_CVSS,
             result.getSecurityVulnerabilities().stream().map(SecurityVulnerabilityDescriptor::getScore)
-                .collect(Collectors.toList()),
+                .toList(),
             doc);
         String fixVersion =
             result.getSecurityVulnerabilities().stream().map(SecurityVulnerabilityDescriptor::getFixVersion)
@@ -392,10 +390,10 @@ public class ExtensionIndexStore implements Initializable, Disposable
             result.getSecurityVulnerabilities().size(), doc);
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, IS_CORE_EXTENSION, result.isCoreExtension(), doc);
         List<Boolean> safeMapping = result.getSecurityVulnerabilities().stream()
-            .map(SecurityVulnerabilityDescriptor::isSafe).collect(Collectors.toList());
+            .map(SecurityVulnerabilityDescriptor::isSafe).toList();
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, IS_REVIEWED_SAFE, safeMapping, doc);
         List<String> reviewExplanations = result.getSecurityVulnerabilities().stream()
-            .map(SecurityVulnerabilityDescriptor::getReviews).collect(Collectors.toList());
+            .map(SecurityVulnerabilityDescriptor::getReviews).toList();
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, IS_SAFE_EXPLANATIONS, reviewExplanations, doc);
 
         add(doc);
@@ -403,7 +401,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     }
 
     /**
-     * Update variable informations (support plans, ratings, etc.) by copying it from another version.
+     * Update variable information (support plans, ratings, etc.) by copying it from another version.
      *
      * @param extensionId the identifier of the extension to update
      * @param copyVersion the version of the extension to copy
@@ -415,7 +413,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
         // Get the version to copy
         SolrQuery solrQuery = new SolrQuery();
         solrQuery.addFilterQuery(
-            ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID + ':' + this.utils.toCompleteFilterQueryString(
+            AbstractSolrCoreInitializer.SOLR_FIELD_ID + ':' + this.utils.toCompleteFilterQueryString(
                 this.extensionIndexSolrUtil.toSolrId(new ExtensionId(extensionId.getId(), copyVersion))));
         solrQuery.setFields(RemoteExtension.FIELD_SUPPORT_PLANS, RemoteExtension.FIELD_RECOMMENDED,
             RatingExtension.FIELD_TOTAL_VOTES, RatingExtension.FIELD_AVERAGE_VOTE);
@@ -432,7 +430,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
 
         SolrInputDocument document = new SolrInputDocument();
 
-        this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID,
+        this.utils.set(AbstractSolrCoreInitializer.SOLR_FIELD_ID,
             this.extensionIndexSolrUtil.toSolrId(extensionId), document);
 
         this.utils.setAtomic(SolrUtils.ATOMIC_UPDATE_MODIFIER_SET, RemoteExtension.FIELD_SUPPORT_PLANS,
@@ -466,7 +464,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrInputDocument document = new SolrInputDocument();
 
-        this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID,
+        this.utils.set(AbstractSolrCoreInitializer.SOLR_FIELD_ID,
             this.extensionIndexSolrUtil.toSolrId(extensionId), document);
 
         // Update installed
@@ -502,7 +500,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrInputDocument document = new SolrInputDocument();
 
-        this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID,
+        this.utils.set(AbstractSolrCoreInitializer.SOLR_FIELD_ID,
             this.extensionIndexSolrUtil.toSolrId(extensionId), document);
 
         updateCompatible(document, namespace, compatible, incompatible);
@@ -534,7 +532,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrQuery solrQuery = new SolrQuery();
 
-        solrQuery.addFilterQuery(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID + ':'
+        solrQuery.addFilterQuery(AbstractSolrCoreInitializer.SOLR_FIELD_ID + ':'
             + this.utils.toCompleteFilterQueryString(this.extensionIndexSolrUtil.toSolrId(extensionId)));
 
         solrQuery.setFields(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_COMPATIBLE_NAMESPACES,
@@ -578,7 +576,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
     {
         SolrInputDocument document = new SolrInputDocument();
 
-        this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID,
+        this.utils.set(AbstractSolrCoreInitializer.SOLR_FIELD_ID,
             this.extensionIndexSolrUtil.toSolrId(extension.getId()), document);
 
         this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_EXTENSIONID, extension.getId().getId(), document);
@@ -599,7 +597,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
 
         this.utils.setString(Extension.FIELD_AUTHORS, extension.getAuthors(), ExtensionAuthor.class, document);
         this.utils.set(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_AUTHORS_INDEX,
-            extension.getAuthors().stream().map(ExtensionAuthor::getName).collect(Collectors.toList()), document);
+            extension.getAuthors().stream().map(ExtensionAuthor::getName).toList(), document);
 
         this.utils.setString(Extension.FIELD_COMPONENTS, extension.getComponents(), ExtensionComponent.class, document);
         for (ExtensionComponent component : extension.getComponents()) {
@@ -645,7 +643,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
         this.client.add(document);
 
         // Remember the modified entry
-        addMofiedId((String) document.getFieldValue(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID));
+        addMofiedId((String) document.getFieldValue(AbstractSolrCoreInitializer.SOLR_FIELD_ID));
 
         // Check if it should be auto committed
         ++this.documentsToStore;
@@ -869,9 +867,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
         }
 
         // Indexed
-        if (query instanceof IndexedExtensionQuery) {
-            IndexedExtensionQuery indexedQuery = (IndexedExtensionQuery) query;
-
+        if (query instanceof IndexedExtensionQuery indexedQuery) {
             // Compatible
             if (indexedQuery.getCompatible() != null) {
                 StringBuilder builder = new StringBuilder();
@@ -988,13 +984,13 @@ public class ExtensionIndexStore implements Initializable, Disposable
         if (solrQuery.getRows() == null) {
             solrQuery.setRows(Integer.MAX_VALUE);
         }
-        solrQuery.setFields(ExtensionIndexSolrCoreInitializer.SOLR_FIELD_ID);
+        solrQuery.setFields(AbstractSolrCoreInitializer.SOLR_FIELD_ID);
 
         QueryResponse response = search(solrQuery);
 
         SolrDocumentList documents = response.getResults();
 
-        Set<ExtensionId> extensionId = new LinkedHashSet<>(documents.size());
+        Set<ExtensionId> extensionId = LinkedHashSet.newLinkedHashSet(documents.size());
         for (SolrDocument document : documents) {
             extensionId.add(this.extensionIndexSolrUtil.fromSolrId(this.utils.getId(document)));
         }
@@ -1038,7 +1034,7 @@ public class ExtensionIndexStore implements Initializable, Disposable
         }
 
         return documents.stream().map(d -> this.utils.<Version>get(Extension.FIELD_VERSION, d, Version.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
